--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,9 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
+        <activity android:name=".Stretches" />
+        <activity android:name=".Exercise" />
+        <activity android:name=".Meditation"></activity>
     </application>
 
 </manifest>
