Added simple pop up design that describes the details of each task, will need to fill in these details later.
Commented out countdown timer as it was proving to be challenging,
return to this when other tasks are completed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,12 @@
         </activity>
         <activity android:name=".Stretches" />
         <activity android:name=".Exercise" />
-        <activity android:name=".Meditation"></activity>
+        <activity android:name=".Meditation" />
+        <activity android:name=".PopUpInfo"
+            android:theme="@style/Theme.AppCompat.Dialog.Alert"
+            >
+
+        </activity>
     </application>
 
 </manifest>
