Click task gives the task description, holding the task gives the you the option of whether you completed or failed the task, clicking complete levels up the task, clicking fail levels down

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,11 +37,13 @@
         <activity android:name=".Stretches" />
         <activity android:name=".Exercise" />
         <activity android:name=".Meditation" />
-        <activity android:name=".PopUpInfo"
+        <activity
+            android:name=".PopUpInfo"
+            android:theme="@style/Theme.AppCompat.Dialog.Alert" />
+        <activity
+            android:name=".CompleteOrFail"
             android:theme="@style/Theme.AppCompat.Dialog.Alert"
-            >
-
-        </activity>
+            ></activity>
     </application>
 
 </manifest>
