--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Homepage"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -18,6 +18,7 @@
         </activity>
         <activity
             android:name=".Tasks"
+            android:label="Tasks"
             android:parentActivityName=".MainActivity">
 
             <!-- The meta-data tag is required if you support API level 15 and lower -->
@@ -27,6 +28,7 @@
         </activity>
         <activity
             android:name=".Journal"
+            android:label="Journal"
             android:parentActivityName=".MainActivity">
 
             <!-- The meta-data tag is required if you support API level 15 and lower -->
@@ -34,14 +36,21 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
-        <activity android:name=".Stretches" />
-        <activity android:name=".Exercise" />
-        <activity android:name=".Meditation" />
+        <activity
+            android:name=".Stretches"
+            android:label="Stretches"/>
+        <activity
+            android:name=".Exercise"
+            android:label="Exercises"/>
+        <activity
+            android:name=".Meditation"
+            android:label="Meditation"/>
         <activity
             android:name=".PopUpInfo"
             android:theme="@style/Theme.AppCompat.Dialog.Alert" />
         <activity
             android:name=".CompleteOrFail"
+            android:label="Progress Report"
             android:theme="@style/Theme.AppCompat.Dialog.Alert"
             ></activity>
     </application>
