- Removed "give up" button and functionality - Created "ExcessArry", stores value of exceeding task requirements     -) stored for each task     -) e.g. excess = amount done - amount required (assuming more than     needed was performed) - Excess value is only replaced if the new excess value is larger - Failing a task divides the excess for that task by 2 to make it   easier - Removed level limit, levels above 10 are essentially the same as   level 10 - Meditation does not have these features (due to the nature of   meditation) (can be implemented easily enough later if needed) - Meditation does have 10+ level feature

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,7 @@
             android:label="Meditation"/>
         <activity
             android:name=".PopUpInfo"
+            android:label="Activity Information"
             android:theme="@style/Theme.AppCompat.Dialog.Alert" />
         <activity
             android:name=".CompleteOrFail"
