--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.rossg_000.fyp_v3">
 
-    <!--     android:theme="@style/AppTheme" -->
+    <!-- android:theme="@style/AppTheme" -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -56,8 +56,10 @@
             android:theme="@style/Theme.AppCompat.Dialog.Alert" />
         <activity
             android:name=".Rewards"
-            android:label="Rewards">
-        </activity>
+            android:label="Rewards"></activity>
+        <activity
+            android:name=".HowTo"
+            android:label="FAQ"></activity>
     </application>
 
 </manifest>
