--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <!-- android:theme="@style/AppTheme" -->
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/trident3"
         android:label="FYP_V3"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
