--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/trident3"
-        android:label="Trident"
+        android:label="TRIDENT"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
